@@ -231,6 +231,10 @@
 				<code>org.eclipse.sirius.diagram.ui.disableHStackContainerNewBehavior</code> to 
 				<code>true</code>. You can also create a specific bugzilla to explain the problem. This system property is temporary and will be removed in one or two versions.
 			</li>
+			<li><span class="label label-info">Modified</span> The 
+				<code>org.eclipse.sirius.ext.base.Option&lt;T&gt;</code> helper type has been deprecated for removal. It will be progressively replaced by the standard 
+				<code>java.util.Optional</code> type in our APIs.
+			</li>
 			<li><span class="label label-danger">Removed</span> 
 				<b>The &#8220;Workflow&#8221; feature</b> has been removed . Workflow was experimental and to our knowledge not used in practice. This corresponds to the 
 				<code>org.eclipse.sirius.workflow.*</code> and 
